# BetterRustAuth

./: .gitignore  AUDIT_REPORT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  completion.md
crates/better-auth/: Cargo.toml  README.md
crates/better-auth-actix/: Cargo.toml  README.md
crates/better-auth-actix/src/: lib.rs
crates/better-auth-actix/tests/: integration.rs
crates/better-auth-axum/: Cargo.toml  README.md
crates/better-auth-axum/src/: lib.rs
crates/better-auth-axum/tests/: integration.rs
crates/better-auth-cli/: Cargo.toml
crates/better-auth-cli/src/: main.rs
crates/better-auth-cli/src/commands/: generate.rs  info.rs  init.rs  login.rs  mcp.rs  migrate.rs  mod.rs  secret.rs
crates/better-auth-client/: Cargo.toml
crates/better-auth-client/src/: error.rs  lib.rs  plugin.rs  session.rs  types.rs
crates/better-auth-client/src/plugins/: admin.rs  anonymous.rs  api_key.rs  device_auth.rs  email_otp.rs  generic_oauth.rs  jwt.rs  magic_link.rs  mod.rs  multi_session.rs  oidc.rs  one_tap.rs  one_time_token.rs  organization.rs  phone_number.rs  siwe.rs  two_factor.rs  username.rs
crates/better-auth-client/tests/: client_tests.rs
crates/better-auth-core/: Cargo.toml  README.md
crates/better-auth-core/src/: env.rs  error.rs  hooks.rs  lib.rs  logger.rs  options.rs  plugin.rs
crates/better-auth-core/src/db/: adapter.rs  field.rs  mod.rs  models.rs  schema.rs  secondary_storage.rs
crates/better-auth-core/src/utils/: id.rs  mod.rs  url.rs
crates/better-auth-diesel/: Cargo.toml
crates/better-auth-diesel/src/: adapter.rs  lib.rs  query.rs  schema_gen.rs
crates/better-auth-dioxus/: Cargo.toml
crates/better-auth-dioxus/src/: lib.rs
crates/better-auth-electron/: Cargo.toml
crates/better-auth-electron/src/: error_codes.rs  lib.rs  routes.rs  types.rs
crates/better-auth-expo/: Cargo.toml
crates/better-auth-expo/src/: lib.rs  routes.rs
crates/better-auth-i18n/: Cargo.toml
crates/better-auth-i18n/src/: lib.rs
crates/better-auth-kysely/: Cargo.toml
crates/better-auth-kysely/src/: adapter.rs  lib.rs  naming.rs
crates/better-auth-leptos/: Cargo.toml
crates/better-auth-leptos/src/: lib.rs
crates/better-auth-memory/: Cargo.toml
crates/better-auth-memory/src/: adapter.rs  lib.rs
crates/better-auth-mongodb/: Cargo.toml
crates/better-auth-mongodb/src/: adapter.rs  lib.rs  query.rs
crates/better-auth-oauth-provider/: Cargo.toml
crates/better-auth-oauth-provider/src/: client.rs  config.rs  consent.rs  discovery.rs  error.rs  grants.rs  lib.rs  pkce.rs  schema.rs  token.rs  types.rs
crates/better-auth-oauth2/: Cargo.toml  README.md
crates/better-auth-oauth2/src/: authorization_url.rs  client_credentials.rs  code_exchange.rs  lib.rs  pkce.rs  provider.rs  refresh.rs  tokens.rs
crates/better-auth-oauth2/src/providers/: mod.rs  provider_overrides.rs  registry.rs
crates/better-auth-passkey/: Cargo.toml
crates/better-auth-passkey/src/: error.rs  lib.rs  routes.rs  schema.rs  types.rs
crates/better-auth-passkey/tests/: passkey_tests.rs
crates/better-auth-redis/: Cargo.toml
crates/better-auth-redis/src/: lib.rs  storage.rs
crates/better-auth-scim/: Cargo.toml
crates/better-auth-scim/src/: config.rs  error.rs  filter.rs  lib.rs  patch.rs  schema.rs  types.rs
crates/better-auth-scim/tests/: scim_tests.rs
crates/better-auth-sea-orm/: Cargo.toml
crates/better-auth-sea-orm/src/: adapter.rs  entity_gen.rs  lib.rs  query.rs
crates/better-auth-sqlx/: Cargo.toml
crates/better-auth-sqlx/src/: adapter.rs  lib.rs  migration.rs  query_builder.rs  schema.rs  transaction.rs
crates/better-auth-sqlx/tests/: integration_test.rs
crates/better-auth-sso/: Cargo.toml
crates/better-auth-sso/src/: config.rs  error.rs  lib.rs  routes.rs  saml.rs  schema.rs  types.rs
crates/better-auth-sso/tests/: sso_tests.rs
crates/better-auth-stripe/: Cargo.toml
crates/better-auth-stripe/src/: config.rs  error.rs  lib.rs  schema.rs  types.rs  webhook.rs
crates/better-auth-stripe/tests/: stripe_tests.rs
crates/better-auth-telemetry/: Cargo.toml
crates/better-auth-telemetry/src/: detectors.rs  lib.rs  project_id.rs  types.rs
crates/better-auth-test-utils/: Cargo.toml
crates/better-auth-test-utils/src/: lib.rs  test_adapter.rs  test_suite.rs
crates/better-auth-yew/: Cargo.toml
crates/better-auth-yew/src/: lib.rs
crates/better-auth/src/: context.rs  handler.rs  init.rs  internal_adapter.rs  lib.rs  state.rs
crates/better-auth/src/api/: endpoint_conflicts.rs  endpoint_pipeline.rs  mod.rs  request_state.rs  transaction.rs
crates/better-auth/src/cookies/: mod.rs  session_cookie.rs  session_store.rs  utils.rs
crates/better-auth/src/crypto/: jwt.rs  mod.rs  password.rs  random.rs  symmetric.rs
crates/better-auth/src/db/: adapter_factory.rs  field_converter.rs  hooks.rs  mod.rs  schema_parse.rs  schema_utils.rs
crates/better-auth/src/middleware/: mod.rs  origin_check.rs  rate_limiter.rs  trusted_origins.rs
crates/better-auth/src/oauth/: link_account.rs  mod.rs  state.rs  token_utils.rs
crates/better-auth/src/plugin_runtime/: endpoint_router.rs  mod.rs  registry.rs  schema_merger.rs
crates/better-auth/src/plugins/: access.rs  additional_fields.rs  admin.rs  anonymous.rs  api_key.rs  bearer.rs  captcha.rs  custom_session.rs  device_authorization.rs  email_otp.rs  generic_oauth.rs  haveibeenpwned.rs  jwt.rs  last_login_method.rs  magic_link.rs  mcp.rs  mod.rs  multi_session.rs  oauth_proxy.rs  oidc_provider.rs  one_tap.rs  one_time_token.rs  open_api.rs  phone_number.rs  siwe.rs  two_factor.rs  username.rs
crates/better-auth/src/routes/: account.rs  callback.rs  email_verification.rs  error.rs  error_page.rs  mod.rs  ok.rs  password.rs  session.rs  sign_in.rs  sign_out.rs  sign_up.rs  update_user.rs
crates/better-auth/src/utils/: date.rs  ip.rs  mod.rs  password.rs  time.rs  url.rs  wildcard.rs
crates/better-auth/src/verification/: mod.rs  token_storage.rs
crates/better-auth/tests/: mcp_tests.rs  oidc_provider_tests.rs  organization_tests.rs  phase32_parity_tests.rs
docs/: ARCHITECTURE.md  PLUGINS.md  (+1 more)
(+21 files in other folders)
