[workspace]
resolver = "2"
members = [
    "crates/better-auth-core",
    "crates/better-auth-oauth2",
    "crates/better-auth",
    "crates/better-auth-sqlx",
    "crates/better-auth-cli",
    "crates/better-auth-axum",
    "crates/better-auth-actix",
    "crates/better-auth-client",
    "crates/better-auth-leptos",
    "crates/better-auth-dioxus",
    "crates/better-auth-yew",
    "crates/better-auth-passkey",
    "crates/better-auth-sso",
    "crates/better-auth-stripe",
    "crates/better-auth-scim",
    "crates/better-auth-i18n",
    "crates/better-auth-oauth-provider",
    "crates/better-auth-memory",
    "crates/better-auth-redis",
    "crates/better-auth-diesel",
    "crates/better-auth-sea-orm",
    "crates/better-auth-mongodb",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
rand = "0.8"
sha2 = "0.10"
sha1 = "0.10"
base64 = "0.22"
scrypt = "0.11"
jsonwebtoken = "9"
chacha20poly1305 = "0.10"
hmac = "0.12"
hkdf = "0.12"
hex = "0.4"
subtle = "2"
k256 = { version = "0.13", features = ["ecdsa"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }
url = "2"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "any", "sqlite", "json"] }

# Utils
uuid = { version = "1", features = ["v4"] }
regex = "1"
urlencoding = "2"

