[package]
name = "better-auth-dioxus"
description = "Dioxus integration for Better Auth — hooks, context, reactive session"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
better-auth-client = { path = "../better-auth-client" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

# Dioxus framework
dioxus = { version = "0.6", features = ["web"] }
