[package]
name = "better-auth-electron"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Electron companion plugin for Better Auth — mirrors @better-auth/electron"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
