[package]
name = "better-auth-expo"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Expo / React Native companion plugin for Better Auth — mirrors @better-auth/expo"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
