[package]
name = "better-auth-kysely"
version = "0.1.0"
edition = "2024"
description = "Kysely compatibility adapter for better-auth — seamless migration from the TypeScript version"

[dependencies]
better-auth-core = { path = "../better-auth-core" }
better-auth-sqlx = { path = "../better-auth-sqlx" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "any"] }
tracing = "0.1"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
