[package]
name = "better-auth-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "In-memory database adapter for better-auth – ideal for testing and prototyping"

[dependencies]
better-auth-core = { path = "../better-auth-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
