[package]
name = "better-auth-mongodb"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MongoDB database adapter for better-auth – document-based NoSQL support"

[dependencies]
better-auth-core = { path = "../better-auth-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true }
futures-util = "0.3"

# MongoDB driver
mongodb = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
