[package]
name = "better-auth-oauth-provider"
description = "OAuth 2.0 Authorization Server plugin for Better Auth — grant types, token management, consent, PKCE"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
better-auth-core = { path = "../better-auth-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
