[package]
name = "better-auth-passkey"
description = "Passkey/WebAuthn plugin for Better Auth — registration, authentication, credential management"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
better-auth-core = { path = "../better-auth-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
