[package]
name = "better-auth-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Redis secondary storage adapter for better-auth – session caching, rate limiting, and token storage"

[dependencies]
better-auth-core = { path = "../better-auth-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
