[package]
name = "better-auth-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SQLx database adapter for better-auth"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[dependencies]
better-auth-core = { path = "../better-auth-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
tokio = { workspace = true }

