[package]
name = "better-auth-sso"
description = "SSO/SAML plugin for Better Auth — SP/IdP configuration, SAML assertion handling, SSO connection management"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
better-auth-core = { path = "../better-auth-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
