[package]
name = "better-auth-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Telemetry / usage analytics for Better Auth — mirrors @better-auth/telemetry"

[dependencies]
better-auth-core = { path = "../better-auth-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
