[package]
name = "better-auth-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Test utilities and adapter test suite for Better Auth — mirrors @better-auth/test-utils"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
